<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClubJoiningActivity">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="340dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!-- Media -->

                    <!-- Buttons -->

                    <!-- Title, secondary and supporting text -->

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/clicksgni" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Clicks@Gni"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="30dp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/clicks"
                        android:layout_width="match_parent"
                        android:layout_height="235dp"
                        android:layout_margin="15sp"
                        android:text="@string/club1"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/joinclicks"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="Join The Club"
                        android:textSize="15sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="340dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/techmatz" />


                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="TechMatz"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="30dp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="235dp"
                        android:layout_margin="15sp"
                        android:text="@string/club2"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/jointechmatz"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="Join The Club"
                        android:textSize="15sp" />


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="340dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/club_streetcause" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Street Cause GNI"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="235dp"
                        android:layout_margin="15dp"
                        android:text="@string/club3"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/joinstrretcause"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="Join The Club"
                        android:textSize="15sp" />


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="340dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/youstavgni" />

                    <!-- Buttons -->

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Youstav Gni"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="235dp"
                        android:layout_margin="15sp"
                        android:text="@string/club4"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/joinyoustav"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="Join The Club"
                        android:textSize="15sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </HorizontalScrollView>

</RelativeLayout>